# ssync

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.github/workflows/: release.yml
crates/ssync/: Cargo.toml
crates/ssync-adapters/: Cargo.toml
crates/ssync-adapters/src/: blob_store.rs  claude_code.rs  codex.rs  lib.rs  pi.rs
crates/ssync-adapters/tests/: adapter_for.rs
crates/ssync-core/: Cargo.toml
crates/ssync-core/src/: cleanup.rs  cluster.rs  config.rs  divergence.rs  exclude.rs  lib.rs  pathmap.rs  reconcile.rs  search.rs  session_filesystem.rs  status.rs  wiremap.rs
crates/ssync-core/src/session_filesystem/: pathmap.rs
crates/ssync-core/tests/: event_flood.rs  multi_node_sync.rs  recipient_rotation.rs  two_node_sync.rs
crates/ssync-core/tests/harness/: mod.rs
crates/ssync-crypto/: Cargo.toml
crates/ssync-crypto/src/: lib.rs  rust_age.rs
crates/ssync-net/: Cargo.toml
crates/ssync-net/src/: lib.rs
crates/ssync/src/: cleanup_timer.rs  cluster.rs  main.rs  service.rs  systemd.rs
docs/: DECISIONS.md  claude-code-format-notes.md  codex-format-notes.md  identity.md  m3-cross-network.md  pairing.md  pi-format-notes.md  setup.md  threat-model.md  vs-syncthing.md
nix/: checks.nix  clan-service.nix  devshell.nix  effects.nix  hm-module.nix  module-contract-test.nix  nixos-module.nix  package.nix  treefmt.nix  vm-mdns-test.nix  vm-module-test.nix  vm-test.nix
