[package]
name = "ssync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ssync-adapters.workspace = true
ssync-crypto.workspace = true
ssync-net.workspace = true
tokio.workspace = true
notify.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
futures-lite.workspace = true

[dev-dependencies]
ssync-adapters.workspace = true
ssync-crypto.workspace = true
ssync-net.workspace = true
tokio.workspace = true

[lints]
workspace = true
